@startuml

class EntidadBase {
    - uuid uuid
    - timestamp created_at
    - timestamp updated_at
}

class SolicitudMonitoreo {
    - string nombre
    - enum estado
    - string urlProducto
    - string nombreUsuario
    - string revisor
    - uuid uuid
    - timestamp created_at
    - timestamp updated_at
}

class ProductoMonitoreado {
    - string nombre
    - string marca
    - string modelo
    - uuid uuid
    - timestamp created_at
    - timestamp updated_at
}

class ProductoSitio {
    - string sitio
    - string productoUuid
    - double ultimoPrecio
    - uuid uuid
    - timestamp created_at
    - timestamp updated_at
}

class RegistroPrecioProducto {
    - double precio
    - date fecha
    - uuid uuid
    - timestamp created_at
    - timestamp updated_at
}

class ProductoReporte {
  - date fechaInicio
  - date fechaFin
  - string nombre
  - uuid uuid
  - timestamp created_at
  - timestamp updated_at
}

SolicitudMonitoreo "many" --- "many" ProductoMonitoreado : "Crea"
ProductoMonitoreado "1" *-- "many" ProductoSitio
ProductoSitio "1" *-- "many" RegistroPrecioProducto
ProductoReporte "1" *-- "many" ProductoMonitoreado

@enduml